HADOOP-19936. TFile parsing is too brittle
Contains content generated by Claude.ai

Contributed by Steve Loughran