@@ -167,6 +167,21 @@ public class TFile {
   public static final String COMPARATOR_JCLASS = "jclass:";
 
   /**
+   * {@value}.
+   */
+  public static final String TFILE_COMPARATOR_JCLASS_ENABLED =
+      "tfile.comparator.jclass.enabled";
+  public static final boolean TFILE_COMPARATOR_JCLASS_ENABLED_DEFAULT = false;
+
+  // Largest encoded length accepted for the comparator string on read.
+  private static final int MAX_COMPARATOR_LENGTH = 64 * 1024;
+  // Upper bound on the serialized size of one index entry: a key no larger
+  // than MAX_KEY_SIZE plus its vint/vlong length prefixes.
+  private static final int MAX_INDEX_ENTRY_SIZE = MAX_KEY_SIZE + 16;
+  // Cap on the pre-allocated capacity of index lists sized from file data.
+  private static final int INDEX_CAPACITY_HINT_CAP = 1024;
+
+  /**
    * Make a raw comparator from a string name.
    * 
    * @param name
@@ -282,7 +297,7 @@ public class TFile {
         String compressName, String comparator, Configuration conf)
         throws IOException {
       sizeMinBlock = minBlockSize;
-      tfileMeta = new TFileMeta(comparator);
+      tfileMeta = new TFileMeta(comparator, conf);
       tfileIndex = new TFileIndex(tfileMeta.getComparator());
 
       writerBCF = new BCFile.Writer(fsdos, compressName, conf);
@@ -804,11 +819,8 @@ public class TFile {
       readerBCF = new BCFile.Reader(fsdis, fileLength, conf);
 
       // first, read TFile meta
-      BlockReader brMeta = readerBCF.getMetaBlock(TFileMeta.BLOCK_NAME);
-      try {
-        tfileMeta = new TFileMeta(brMeta);
-      } finally {
-        brMeta.close();
+      try (BlockReader brMeta = readerBCF.getMetaBlock(TFileMeta.BLOCK_NAME)) {
+        tfileMeta = new TFileMeta(brMeta, conf);
       }
 
       comparator = tfileMeta.getComparator();
@@ -1603,6 +1615,9 @@ public class TFile {
         valueChecked = false;
 
         klen = Utils.readVInt(blkReader);
+        if (klen < 0 || klen > MAX_KEY_SIZE) {
+          throw new IOException("Key length out of range: " + klen);
+        }
         blkReader.readFully(keyBuffer, 0, klen);
         valueBufferInputStream.reset(blkReader);
         if (valueBufferInputStream.isLastChunk()) {
@@ -2049,26 +2064,41 @@ public class TFile {
 
     // ctor for writes
     public TFileMeta(String comparator) {
+      this(comparator, new Configuration());
+    }
+
+    // ctor for writes
+    public TFileMeta(String comparator, Configuration conf) {
       // set fileVersion to API version when we create it.
       version = TFile.API_VERSION;
       recordCount = 0;
       strComparator = (comparator == null) ? "" : comparator;
-      this.comparator = makeComparator(strComparator);
+      this.comparator = makeComparator(strComparator, conf);
     }
 
     // ctor for reads
     public TFileMeta(DataInput in) throws IOException {
+      this(in, new Configuration());
+    }
+
+    // ctor for reads
+    public TFileMeta(DataInput in, Configuration conf) throws IOException {
       version = new Version(in);
       if (!version.compatibleWith(TFile.API_VERSION)) {
         throw new RuntimeException("Incompatible TFile fileVersion.");
       }
       recordCount = Utils.readVLong(in);
-      strComparator = Utils.readString(in);
-      comparator = makeComparator(strComparator);
+      strComparator = Utils.readString(in, MAX_COMPARATOR_LENGTH);
+      comparator = makeComparator(strComparator, conf);
+    }
+
+    static BytesComparator makeComparator(String comparator) {
+      return makeComparator(comparator, new Configuration());
     }
 
     @SuppressWarnings("unchecked")
-    static BytesComparator makeComparator(String comparator) {
+    static BytesComparator makeComparator(String comparator,
+        Configuration conf) {
       if (comparator.length() == 0) {
         // unsorted keys
         return null;
@@ -2077,13 +2107,24 @@ public class TFile {
         // default comparator
         return new BytesComparator(new MemcmpRawComparator());
       } else if (comparator.startsWith(COMPARATOR_JCLASS)) {
+        if (!conf.getBoolean(TFILE_COMPARATOR_JCLASS_ENABLED,
+            TFILE_COMPARATOR_JCLASS_ENABLED_DEFAULT)) {
+          throw new IllegalArgumentException(
+              "Class-name comparators are not enabled (set "
+                  + TFILE_COMPARATOR_JCLASS_ENABLED + "=true to allow): "
+                  + comparator);
+        }
         String compClassName =
             comparator.substring(COMPARATOR_JCLASS.length()).trim();
         try {
-          Class compClass = Class.forName(compClassName);
-          // use its default ctor to create an instance
-          return new BytesComparator((RawComparator<Object>) compClass
-              .newInstance());
+          // Resolve without running the class initializer, confirm it really
+          // is a RawComparator, and only then load and construct it.
+          Class<?> compClass =
+              Class.forName(compClassName, false, conf.getClassLoader());
+          RawComparator<Object> rawComparator =
+              (RawComparator<Object>) compClass.asSubclass(RawComparator.class)
+                  .getDeclaredConstructor().newInstance();
+          return new BytesComparator(rawComparator);
         } catch (Exception e) {
           throw new IllegalArgumentException(
               "Failed to instantiate comparator: " + comparator + "("
@@ -2144,21 +2185,35 @@ public class TFile {
      */
     public TFileIndex(int entryCount, DataInput in, BytesComparator comparator)
         throws IOException {
-      index = new ArrayList<TFileIndexEntry>(entryCount);
-      recordNumIndex = new ArrayList<Long>(entryCount);
+      // entryCount is derived from the file; only use it as a capacity hint,
+      // bounded, so a corrupt value cannot force a huge pre-allocation. The
+      // loops below are limited by the actual bytes available in the stream.
+      int capacityHint = Math.max(0, Math.min(entryCount, INDEX_CAPACITY_HINT_CAP));
+      index = new ArrayList<>(capacityHint);
+      recordNumIndex = new ArrayList<>(capacityHint);
       int size = Utils.readVInt(in); // size for the first key entry.
       if (size > 0) {
+        if (size > MAX_INDEX_ENTRY_SIZE) {
+          throw new IOException("First key entry size out of range: " + size);
+        }
         byte[] buffer = new byte[size];
         in.readFully(buffer);
         DataInputStream firstKeyInputStream =
             new DataInputStream(new ByteArrayInputStream(buffer, 0, size));
 
         int firstKeyLength = Utils.readVInt(firstKeyInputStream);
+        if (firstKeyLength < 0 || firstKeyLength > MAX_KEY_SIZE) {
+          throw new IOException("First key length out of range: "
+              + firstKeyLength);
+        }
         firstKey = new ByteArray(new byte[firstKeyLength]);
         firstKeyInputStream.readFully(firstKey.buffer());
 
         for (int i = 0; i < entryCount; i++) {
           size = Utils.readVInt(in);
+          if (size < 0 || size > MAX_INDEX_ENTRY_SIZE) {
+            throw new IOException("Index entry size out of range: " + size);
+          }
           if (buffer.length < size) {
             buffer = new byte[size];
           }
@@ -2226,8 +2281,8 @@ public class TFile {
      * For writing to file.
      */
     public TFileIndex(BytesComparator comparator) {
-      index = new ArrayList<TFileIndexEntry>();
-      recordNumIndex = new ArrayList<Long>();
+      index = new ArrayList<>();
+      recordNumIndex = new ArrayList<>();
       this.comparator = comparator;
     }
 
@@ -2301,6 +2356,9 @@ public class TFile {
 
     public TFileIndexEntry(DataInput in) throws IOException {
       int len = Utils.readVInt(in);
+      if (len < 0 || len > MAX_KEY_SIZE) {
+        throw new IOException("Index entry key length out of range: " + len);
+      }
       key = new byte[len];
       in.readFully(key, 0, len);
       kvEntries = Utils.readVLong(in);
